# SubzeroECS

./: .gitignore  BUILD_OPTIMIZATION_PLAN.md  CMakeLists.txt  CMakePresets.json  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  LICENSE  NOTICE  QUICK_START_BUILD_OPTIMIZATIONS.md  README.md  build_profile_results.csv  profile_build.ps1  reconfigure.ps1
.github/ISSUE_TEMPLATE/: config.yml  license-request.md
benchmarks/: BUILDING.md  CMakeLists.txt  PERFORMANCE_GUIDE.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  VSCODE.md
benchmarks/coherent_update/: CMakeLists.txt  README.md  dod_implementation.hpp  ecs_implementation.hpp  main.cpp  oop_implementation.hpp
benchmarks/fragmented_update/: CMakeLists.txt  dod_implementation.hpp  ecs_implementation.hpp  main.cpp  oop_implementation.hpp
benchmarks/position_update/: CMakeLists.txt  ecs_implementation.hpp  main.cpp
benchmarks/update_patterns/: CMakeLists.txt  README.md  common.hpp  dod_implementation.hpp  ecs_implementation.hpp  main.cpp  oop_implementation.hpp
cmake/: CPM.cmake  FindBenchmark.cmake  FindFmt.cmake  FindGTest.cmake  Version.cmake  tools.cmake
documentation/: CMakeLists.txt  conf.py
documentation/pages/: CPP20_MODULES_FUTURE.md
samples/: CMakeLists.txt  README.md
samples/balls_simulation/: AlternativePatterns.hpp  AoS_Implementation.hpp  CMakeLists.txt  Components.hpp  ECS_Implementation.hpp  ECS_Systems.hpp  OOP_Implementation.hpp  PhysicsCommon.hpp  README.md  SoA_Implementation.hpp  main.cpp
samples/rocket/: CMakeLists.txt  README.md  main.cpp
source/SubzeroECS/: Collection.hpp  CollectionRegistry.cpp  CollectionRegistry.hpp  Entity.cpp  Entity.hpp  EntityId.hpp  FreeIndexList.cpp  FreeIndexList.hpp  FreeIndexList32.hpp  GlobalUniqueIndex.cpp  GlobalUniqueIndex.hpp  Has.hpp  Intersection.hpp  Logical.cpp  Logical.hpp  Mask.cpp  Mask.hpp  Query.hpp  SubzeroECS.hpp  System.hpp  UniqueIndex32.cpp  UniqueIndex32.hpp  View.hpp  World.hpp
source/SubzeroECS/BAK OLD/: IUnityContainer.h
source/SubzeroECS/Utility/: StructOfVector.hpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: CollectionRegistry_test.cpp  Collection_test.cpp  Container_test.cpp  FreeIndexList_test.cpp  GlobalUniqueIndex_test.cpp  Intersection_test.cpp  Logical_test.cpp  Mask_test.cpp  Node_test.cpp  SubzeroECS.cpp  TestTypes.cpp  TestTypes.hpp  View_test.cpp  World_test.cpp
